data/derived/sp14/progs/unify/prog0238.ml.out
Characters 112-122:
  helper (v mod 10)::acc (v/10)
         ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
